fixed colab button

--- a/notebooks/experiment.ipynb
+++ b/notebooks/experiment.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# The Optimist: Towards Fully Automated Graph Theory\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/RandyRDavila/The-Optimist/blob/main/notebooks/experiment.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/RandyRDavila/The-Optimist/blob/main/notebooks/experiment.ipynb)\n",
     "\n",
     "This notebook walks you through automated conjecturing in graph theory by interacting with the *Optimist* agent. To begin, we first define several Python classes which represent the conjectures that the *Optimist* works with. \n",
     "\n",
